@@ -5,6 +5,8 @@ Date: 27/11/25
     - Spidertrons can now deliver items between hex cores or other inventories.
     - Added the electromagnetic penetrator handheld weapon.
     - Added a full-featured trade loop finder as a quest reward from Gleba.
+  Minor Features:
+    - Added the "ping in chat" button for trades in the trade overview.
   Changes:
     - The Sentient Spider is now equipped with six electromagnetic penetrators instead of one (buffed) teslagun.
     - Clicking an item in a trade while a hex core is open now opens the trade overview instead of the catalog.
